# free-learning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  shell.sh
.github/workflows/: acceptance.yml  backend.yaml  frontend.yaml  main.yaml  playwright.yml
acceptance/: package-lock.json  package.json  playwright.config.ts  test.spec.js
acceptance/api_tests/: config.ts
acceptance/web_tests/: config.ts  main.spec.ts
backend/: .env  .example.env  Dockerfile  alembic.ini  app.py  container.py  log.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0dd6b3a9cf61_init.py  27b1f4a28764_contraints.py  6612370ae0b5_init.py  dacdc9821d8a_add_account_name.py
backend/base/: authentification.py  config.py  db.py  db_age.py  db_tables.py  email.py  exceptions.py  models.py  parser.py  routes.py  view.py
backend/fl_core/: app.py  config.py  db.py  models.py  routes.py
backend/tests/: conftest.py  test_age.py  test_base.py  test_entity.py  test_parser.py  test_smoke.py  test_workflow.py
backend/workdomain/: routes.py
backend/workflow/: routes.py
blog/src/: config.toml
frontend/: .dockerignore  Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/components/: layout.tsx  tagsview.module.css  tagsview.tsx  tagview.tsx  texteditor.tsx
frontend/pages/: _app.tsx  apis.ts  first-post.tsx  index.tsx  init-component.tsx  second-post.tsx  settings.tsx
frontend/pages/auth/: email.tsx
infra/: ingress.yaml
infra/age-helm/: Chart.yaml
infra/age-helm/templates/: pvc.yaml  service.yaml  stateful-set.yaml
infra/backend-helm/: Chart.yaml
infra/backend-helm/templates/: deployment.yaml  service.yaml
infra/ingress-helm/: Chart.yaml  values.yaml
infra/ingress-helm/templates/: ingress.yaml
infra/prod/: age.values.yaml  backend.values.yaml  datadog.values.yaml  frontend.values.yaml  ingress-controller.values.yaml  ingress.values.yaml
tests/: test_smoke.py
(+24 files in other folders)
