[tool.poetry]
name = "free-learning-bc"
version = "0.1.0"
description = ""
authors = ["Alexander Ptakhin <me@aptakhin.name>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fl_core"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
httpx = "^0.23.1"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
asyncpg = "^0.27.0"
SQLAlchemy = "^1.4.45"
markdown-it-py = {extras = ["plugins"], version = "^2.1.0"}
linkify-it-py = "^2.0.0"
alembic = "^1.9.1"
pyjwt = "^2.6.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest-dotenv = "^0.5.2"
pytest-watcher = "^0.2.6"
pytest-asyncio = "^0.20.3"
factory-boy = "^3.2.1"
aiosmtpd = "^1.4.3"
mypy = "^0.991"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
